--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@tarikjabiri/dxf": "^2.8.9",
     "@types/three": "^0.178.1",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^17.2.1",
     "earcut": "^3.0.1",
     "jsdom": "^23.0.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
-    "mongoose": "^8.1.0",
+    "mongoose": "^8.17.0",
     "next": "14.0.4",
-    "nodemailer": "^6.9.8",
+    "nodemailer": "^6.10.1",
     "openai": "^5.8.2",
     "react": "^18",
     "react-dom": "^18",
