--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "ai-cad",
+  "name": "reg-gpt",
   "version": "0.1.0",
   "private": true,
+  "description": "AI-powered building regulations and codes search assistant for architecture firms",
+  "keywords": ["building codes", "regulations", "AI assistant", "architecture", "compliance", "construction"],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,6 +12,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.55.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tarikjabiri/dxf": "^2.8.9",
     "@types/three": "^0.178.1",
     "bcryptjs": "^2.4.3",
@@ -19,7 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.17.0",
-    "next": "14.0.4",
+    "next": "^14.2.31",
     "nodemailer": "^6.10.1",
     "openai": "^5.8.2",
     "react": "^18",
@@ -29,11 +32,12 @@
   },
   "devDependencies": {
     "@types/node": "24.0.6",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "19.1.8",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
