--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "openai": "^5.8.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-pdf": "^9.1.1",
+    "pdfjs-dist": "^3.11.174",
     "three": "^0.178.0",
     "three-stdlib": "^2.36.0"
   },
